Adding white fade to the side of tabular data. #148

--- a/htdocs/static/css/application.css
+++ b/htdocs/static/css/application.css
@@ -3338,7 +3338,8 @@ section.feature-content {
   float: left;
   margin-right: 1%;
   padding: 20px;
-  width: 49%; }
+  width: 49%;
+  /* White fade */ }
   @media only screen and (min-device-width: 320px) and (max-device-width: 480px), only screen and (min-width: 320px) and (max-width: 480px) {
     /* line 36, ../scss/areas/_page-law-show.scss */
     .law .primary-content {
@@ -3370,83 +3371,99 @@ section.feature-content {
     text-transform: uppercase; }
   /* line 79, ../scss/areas/_page-law-show.scss */
   .law .primary-content section {
-    max-width: 100%;
-    overflow: auto; }
-    /* line 86, ../scss/areas/_page-law-show.scss */
+    position: relative; }
+    /* line 85, ../scss/areas/_page-law-show.scss */
     .law .primary-content section.indent {
       margin-left: 1em;
       /* 16px */ }
-    /* line 92, ../scss/areas/_page-law-show.scss */
+    /* line 91, ../scss/areas/_page-law-show.scss */
     .law .primary-content section.indent-1 {
       margin-left: 1em; }
-    /* line 92, ../scss/areas/_page-law-show.scss */
+    /* line 91, ../scss/areas/_page-law-show.scss */
     .law .primary-content section.indent-2 {
       margin-left: 2em; }
-    /* line 92, ../scss/areas/_page-law-show.scss */
+    /* line 91, ../scss/areas/_page-law-show.scss */
     .law .primary-content section.indent-3 {
       margin-left: 3em; }
-    /* line 92, ../scss/areas/_page-law-show.scss */
+    /* line 91, ../scss/areas/_page-law-show.scss */
     .law .primary-content section.indent-4 {
       margin-left: 4em; }
-    /* line 92, ../scss/areas/_page-law-show.scss */
+    /* line 91, ../scss/areas/_page-law-show.scss */
     .law .primary-content section.indent-5 {
       margin-left: 5em; }
-    /* line 92, ../scss/areas/_page-law-show.scss */
+    /* line 91, ../scss/areas/_page-law-show.scss */
     .law .primary-content section.indent-6 {
       margin-left: 6em; }
-    /* line 92, ../scss/areas/_page-law-show.scss */
+    /* line 91, ../scss/areas/_page-law-show.scss */
     .law .primary-content section.indent-7 {
       margin-left: 7em; }
-    /* line 92, ../scss/areas/_page-law-show.scss */
+    /* line 91, ../scss/areas/_page-law-show.scss */
     .law .primary-content section.indent-8 {
       margin-left: 8em; }
-  /* line 99, ../scss/areas/_page-law-show.scss */
+  /* line 98, ../scss/areas/_page-law-show.scss */
   .law .primary-content p {
     margin: 0 0 1.25em 0; }
-  /* line 103, ../scss/areas/_page-law-show.scss */
+  /* line 101, ../scss/areas/_page-law-show.scss */
+  .law .primary-content .tabular {
+    max-width: 100%;
+    overflow: auto; }
+  /* line 106, ../scss/areas/_page-law-show.scss */
   .law .primary-content pre.table {
     margin: 0 0 20px 0;
     font-size: .75em;
     white-space: pre; }
-  /* line 109, ../scss/areas/_page-law-show.scss */
+  /* line 112, ../scss/areas/_page-law-show.scss */
+  .law .primary-content .tabular:before {
+    content: ' ';
+    position: absolute;
+    right: 0;
+    top: 0;
+    height: 100%;
+    width: 30px;
+    background-image: -webkit-gradient(linear, 100% 50%, 0% 50%, color-stop(0%, #ffffff), color-stop(50%, rgba(255, 255, 255, 0.7)), color-stop(100%, rgba(255, 255, 255, 0)));
+    background-image: -webkit-linear-gradient(right, #ffffff, rgba(255, 255, 255, 0.7) 50%, rgba(255, 255, 255, 0));
+    background-image: -moz-linear-gradient(right, #ffffff, rgba(255, 255, 255, 0.7) 50%, rgba(255, 255, 255, 0));
+    background-image: -o-linear-gradient(right, #ffffff, rgba(255, 255, 255, 0.7) 50%, rgba(255, 255, 255, 0));
+    background-image: linear-gradient(right, #ffffff, rgba(255, 255, 255, 0.7) 50%, rgba(255, 255, 255, 0)); }
+  /* line 122, ../scss/areas/_page-law-show.scss */
   .law .primary-content span.dictionary {
     border-bottom: 1px dotted #558fae; }
-/* line 115, ../scss/areas/_page-law-show.scss */
+/* line 128, ../scss/areas/_page-law-show.scss */
 .law .secondary-content {
   float: right;
   padding: 20px;
   width: 44%; }
   @media only screen and (min-device-width: 320px) and (max-device-width: 480px), only screen and (min-width: 320px) and (max-width: 480px) {
-    /* line 115, ../scss/areas/_page-law-show.scss */
+    /* line 128, ../scss/areas/_page-law-show.scss */
     .law .secondary-content {
       float: none;
       width: 100%; } }
   @media only print {
-    /* line 115, ../scss/areas/_page-law-show.scss */
+    /* line 128, ../scss/areas/_page-law-show.scss */
     .law .secondary-content {
       float: none;
       padding: 0;
       width: 100%; } }
-  /* line 132, ../scss/areas/_page-law-show.scss */
+  /* line 145, ../scss/areas/_page-law-show.scss */
   .law .secondary-content ul {
     list-style: none; }
-  /* line 137, ../scss/areas/_page-law-show.scss */
+  /* line 150, ../scss/areas/_page-law-show.scss */
   .law .secondary-content .identifier,
   .law .secondary-content .title {
     display: block;
     margin: 1em 0 0; }
-  /* line 142, ../scss/areas/_page-law-show.scss */
+  /* line 155, ../scss/areas/_page-law-show.scss */
   .law .secondary-content .ad {
     margin: 0 auto 20px auto; }
     @media only screen and (min-device-width: 768px) and (max-device-width: 1024px), only screen and (min-width: 768px) and (max-width: 1024px) {
-      /* line 142, ../scss/areas/_page-law-show.scss */
+      /* line 155, ../scss/areas/_page-law-show.scss */
       .law .secondary-content .ad {
         max-width: 100%; } }
     @media only screen and (min-device-width: 320px) and (max-device-width: 480px), only screen and (min-width: 320px) and (max-width: 480px) {
-      /* line 142, ../scss/areas/_page-law-show.scss */
+      /* line 155, ../scss/areas/_page-law-show.scss */
       .law .secondary-content .ad {
         max-width: 100%; } }
-  /* line 156, ../scss/areas/_page-law-show.scss */
+  /* line 169, ../scss/areas/_page-law-show.scss */
   .law .secondary-content .grouping,
   .law .secondary-content .related-group {
     float: left;
@@ -3454,21 +3471,21 @@ section.feature-content {
     text-align: left;
     width: 32.5%; }
     @media only screen and (min-device-width: 768px) and (max-device-width: 1024px), only screen and (min-width: 768px) and (max-width: 1024px) {
-      /* line 156, ../scss/areas/_page-law-show.scss */
+      /* line 169, ../scss/areas/_page-law-show.scss */
       .law .secondary-content .grouping,
       .law .secondary-content .related-group {
         float: none;
         width: 100%; } }
     @media only screen and (min-device-width: 320px) and (max-device-width: 480px), only screen and (min-width: 320px) and (max-width: 480px) {
-      /* line 156, ../scss/areas/_page-law-show.scss */
+      /* line 169, ../scss/areas/_page-law-show.scss */
       .law .secondary-content .grouping,
       .law .secondary-content .related-group {
         float: none;
         width: 100%; } }
-  /* line 174, ../scss/areas/_page-law-show.scss */
+  /* line 187, ../scss/areas/_page-law-show.scss */
   .law .secondary-content .grouping.last {
     margin-right: 0; }
-  /* line 180, ../scss/areas/_page-law-show.scss */
+  /* line 193, ../scss/areas/_page-law-show.scss */
   .law .secondary-content .grouping > section,
   .law .secondary-content .related-group,
   .law .secondary-content .info-box {
@@ -3478,7 +3495,7 @@ section.feature-content {
     margin-bottom: 1em;
     padding: 0;
     text-align: left; }
-    /* line 190, ../scss/areas/_page-law-show.scss */
+    /* line 203, ../scss/areas/_page-law-show.scss */
     .law .secondary-content .grouping > section h1,
     .law .secondary-content .related-group h1,
     .law .secondary-content .info-box h1 {
@@ -3488,26 +3505,26 @@ section.feature-content {
       margin: 0.5em 0;
       padding: 0 10px;
       text-transform: capitalize; }
-    /* line 199, ../scss/areas/_page-law-show.scss */
+    /* line 212, ../scss/areas/_page-law-show.scss */
     .law .secondary-content .grouping > section > h1,
     .law .secondary-content .related-group > h1,
     .law .secondary-content .info-box > h1 {
       font-style: normal;
       text-transform: uppercase; }
-    /* line 204, ../scss/areas/_page-law-show.scss */
+    /* line 217, ../scss/areas/_page-law-show.scss */
     .law .secondary-content .grouping > section p, .law .secondary-content .grouping > section h2,
     .law .secondary-content .related-group p,
     .law .secondary-content .related-group h2,
     .law .secondary-content .info-box p,
     .law .secondary-content .info-box h2 {
       padding: 0 10px; }
-    /* line 208, ../scss/areas/_page-law-show.scss */
+    /* line 221, ../scss/areas/_page-law-show.scss */
     .law .secondary-content .grouping > section.header-bar-full,
     .law .secondary-content .related-group.header-bar-full,
     .law .secondary-content .info-box.header-bar-full {
       float: none;
       width: 100%; }
-      /* line 212, ../scss/areas/_page-law-show.scss */
+      /* line 225, ../scss/areas/_page-law-show.scss */
       .law .secondary-content .grouping > section.header-bar-full > h1,
       .law .secondary-content .related-group.header-bar-full > h1,
       .law .secondary-content .info-box.header-bar-full > h1 {
@@ -3521,17 +3538,17 @@ section.feature-content {
         text-shadow: 0 -1px 1px rgba(0, 0, 0, 0.4);
         text-transform: uppercase;
         width: 100%; }
-      /* line 225, ../scss/areas/_page-law-show.scss */
+      /* line 238, ../scss/areas/_page-law-show.scss */
       .law .secondary-content .grouping > section.header-bar-full p,
       .law .secondary-content .related-group.header-bar-full p,
       .law .secondary-content .info-box.header-bar-full p {
         margin: 0 0 10px 0; }
-    /* line 231, ../scss/areas/_page-law-show.scss */
+    /* line 244, ../scss/areas/_page-law-show.scss */
     .law .secondary-content .grouping > section#legal_self_help,
     .law .secondary-content .related-group#legal_self_help,
     .law .secondary-content .info-box#legal_self_help {
       overflow: hidden; }
-      /* line 234, ../scss/areas/_page-law-show.scss */
+      /* line 247, ../scss/areas/_page-law-show.scss */
       .law .secondary-content .grouping > section#legal_self_help ul,
       .law .secondary-content .related-group#legal_self_help ul,
       .law .secondary-content .info-box#legal_self_help ul {
@@ -3539,7 +3556,7 @@ section.feature-content {
         list-style-type: none;
         padding: 0 10px;
         margin: 0; }
-        /* line 241, ../scss/areas/_page-law-show.scss */
+        /* line 254, ../scss/areas/_page-law-show.scss */
         .law .secondary-content .grouping > section#legal_self_help ul li,
         .law .secondary-content .related-group#legal_self_help ul li,
         .law .secondary-content .info-box#legal_self_help ul li {
@@ -3548,25 +3565,25 @@ section.feature-content {
           margin-bottom: 15px;
           width: 49%; }
           @media only screen and (min-device-width: 320px) and (max-device-width: 480px), only screen and (min-width: 320px) and (max-width: 480px) {
-            /* line 241, ../scss/areas/_page-law-show.scss */
+            /* line 254, ../scss/areas/_page-law-show.scss */
             .law .secondary-content .grouping > section#legal_self_help ul li,
             .law .secondary-content .related-group#legal_self_help ul li,
             .law .secondary-content .info-box#legal_self_help ul li {
               float: none;
               width: 100%; } }
           @media only screen and (min-device-width: 768px) and (max-device-width: 1024px), only screen and (min-width: 768px) and (max-width: 1024px) {
-            /* line 241, ../scss/areas/_page-law-show.scss */
+            /* line 254, ../scss/areas/_page-law-show.scss */
             .law .secondary-content .grouping > section#legal_self_help ul li,
             .law .secondary-content .related-group#legal_self_help ul li,
             .law .secondary-content .info-box#legal_self_help ul li {
               float: none;
               width: 100%; } }
-          /* line 259, ../scss/areas/_page-law-show.scss */
+          /* line 272, ../scss/areas/_page-law-show.scss */
           .law .secondary-content .grouping > section#legal_self_help ul li article h1,
           .law .secondary-content .related-group#legal_self_help ul li article h1,
           .law .secondary-content .info-box#legal_self_help ul li article h1 {
             font-family: "ff-meta-serif-web-pro", Georgia, "Times New Roman", Times, serif; }
-          /* line 266, ../scss/areas/_page-law-show.scss */
+          /* line 279, ../scss/areas/_page-law-show.scss */
           .law .secondary-content .grouping > section#legal_self_help ul li article.pdf,
           .law .secondary-content .related-group#legal_self_help ul li article.pdf,
           .law .secondary-content .info-box#legal_self_help ul li article.pdf {
@@ -3574,25 +3591,25 @@ section.feature-content {
             background-repeat: no-repeat;
             background-position: top left;
             padding-left: 42px; }
-    /* line 280, ../scss/areas/_page-law-show.scss */
+    /* line 293, ../scss/areas/_page-law-show.scss */
     .law .secondary-content .grouping > section#amendment_attempts h2,
     .law .secondary-content .related-group#amendment_attempts h2,
     .law .secondary-content .info-box#amendment_attempts h2 {
       font-size: 125%; }
-    /* line 284, ../scss/areas/_page-law-show.scss */
+    /* line 297, ../scss/areas/_page-law-show.scss */
     .law .secondary-content .grouping > section#amendment_attempts a,
     .law .secondary-content .related-group#amendment_attempts a,
     .law .secondary-content .info-box#amendment_attempts a {
       font-size: 18px;
       font-style: italic;
       font-weight: bold; }
-    /* line 294, ../scss/areas/_page-law-show.scss */
+    /* line 307, ../scss/areas/_page-law-show.scss */
     .law .secondary-content .grouping > section#court_decisions article.court-decision h1,
     .law .secondary-content .related-group#court_decisions article.court-decision h1,
     .law .secondary-content .info-box#court_decisions article.court-decision h1 {
       font-family: "ff-meta-serif-web-pro", Georgia, "Times New Roman", Times, serif;
       margin: 1em 0 0 0; }
-    /* line 299, ../scss/areas/_page-law-show.scss */
+    /* line 312, ../scss/areas/_page-law-show.scss */
     .law .secondary-content .grouping > section#court_decisions article.court-decision h2,
     .law .secondary-content .related-group#court_decisions article.court-decision h2,
     .law .secondary-content .info-box#court_decisions article.court-decision h2 {
@@ -3601,22 +3618,22 @@ section.feature-content {
       font-variant: uppercase;
       margin: 0;
       text-transform: uppercase; }
-  /* line 312, ../scss/areas/_page-law-show.scss */
+  /* line 325, ../scss/areas/_page-law-show.scss */
   .law .secondary-content p.keyboard {
     font-family: "proxima-nova", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 0.9em;
     text-transform: uppercase; }
     @media only print {
-      /* line 317, ../scss/areas/_page-law-show.scss */
+      /* line 330, ../scss/areas/_page-law-show.scss */
       .law .secondary-content p.keyboard a#keyhelp {
         display: none; } }
-  /* line 324, ../scss/areas/_page-law-show.scss */
+  /* line 337, ../scss/areas/_page-law-show.scss */
   .law .secondary-content .dark {
     background-color: #656358;
     color: #fff;
     overflow: hidden;
     text-shadow: 0 -1px 1px rgba(0, 0, 0, 0.4); }
-    /* line 330, ../scss/areas/_page-law-show.scss */
+    /* line 343, ../scss/areas/_page-law-show.scss */
     .law .secondary-content .dark > h1 {
       float: left;
       font-size: 24px;
@@ -3626,19 +3643,19 @@ section.feature-content {
       padding: 10px;
       text-transform: uppercase;
       width: 50%; }
-    /* line 341, ../scss/areas/_page-law-show.scss */
+    /* line 354, ../scss/areas/_page-law-show.scss */
     .law .secondary-content .dark dl {
       float: right;
       margin: 1em 0 0 0;
       padding: 0;
       width: 49%; }
-      /* line 347, ../scss/areas/_page-law-show.scss */
+      /* line 360, ../scss/areas/_page-law-show.scss */
       .law .secondary-content .dark dl dt {
         font-size: 85%;
         margin: 0;
         padding: 0;
         text-transform: uppercase; }
-      /* line 348, ../scss/areas/_page-law-show.scss */
+      /* line 361, ../scss/areas/_page-law-show.scss */
       .law .secondary-content .dark dl dd {
         margin: 0 0 1em 0;
         padding: 0; }
